@@ -1,6 +1,6 @@
 Here is an ASCII diagram of the current architecture:
 
-      txlb.tac
+    application
          |
          |
   +--------------+
